# cooking-recipes-scraper

./: .dockerignore  .editorconfig  .gitignore  .pre-commit-config.yaml  Dockerfile  Dockerfile.poetry  Dockerfile.poetry_not_opt  Dockerfile.test  README.md  alembic.ini  compose.test.yaml  compose.yaml  entrypoint.format.sh  entrypoint.sh  entrypoint.tests.sh  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: python-app.yml
alembic/: README  env.py
alembic/versions/: 1699724838-groceries_and_grocery_lists_tables-e9aedd17ed96.py  1699742605-converting_from_enum_to_string-75ccfb61d19b.py  2023_11_05_2154-1f3a98a9251c_added_grocery_lists_and_groceries_tables.py
cr_scraper/: main.py
cr_scraper/api/: main.py
cr_scraper/api/router/: api.py  security.py  ui.py
cr_scraper/api/schema/: model.py
cr_scraper/api/services/: recipes.py  security.py
cr_scraper/archiver/: __init__.py
cr_scraper/grocery_list/: exceptions.py  model.py
cr_scraper/persistence/: db_engine.py  mapper.py  model.py  playground.py  repository.py
cr_scraper/scraper/: exceptions.py  model.py  playground.py  recipe_components.py  scraper.py
cr_scraper/tests/: test_main.py
cr_scraper/tests/unit/grocery_list/: test_model.py
cr_scraper/tests/unit/scraper/: test_model.py  test_scraper.py
cr_scraper/ui/templates/: index.html  layout.html  login.html
cr_scraper/ui/templates/grocery_list/: add_recipe.html  archive_ui.html  edit.html  partial_search_results.html  rows.html  show.html
docker/dev/: Dockerfile  entrypoint.sh
docker/test/: Dockerfile.test  entrypoint.flake8.sh  entrypoint.sh
docs/: index.md
src/cr_scraper/api/: main.py
src/cr_scraper/api/router/: security.py  ui.py
src/cr_scraper/archiver/: __init__.py
src/cr_scraper/grocery_list/: model.py
src/cr_scraper/persistence/: db_engine.py  mapper.py  model.py  playground.py  repository.py
src/cr_scraper/scraper/: model.py  recipe_components.py  scraper.py
tests/: test_main.py
tests/db/: test_db_create_objects.py
tests/unit/grocery_list/: test_model.py
tests/unit/scraper/: test_model.py  test_scraper.py
tests/unit/security/: test_authenticate.py
(+10 files in other folders)
