[tool.poetry]
name = "cr_scraper"
version = "0.1.0"
description = "Cooking recipes scraper and exporter"
authors = ["pr0f37 <adam.nowik@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
annotated-types = "0.5.0"
anyio = "3.7.1"
beautifulsoup4 = "4.12.2"
build = "1.0.3"
certifi = "2023.7.22"
cfgv = "3.4.0"
charset-normalizer = "3.3.0"
click = "8.1.7"
distlib = "0.3.7"
fastapi = "0.103.1"
filelock = "3.12.4"
future = "0.18.3"
gkeepapi = "0.15.0"
gpsoauth = "1.0.3"
h11 = "0.14.0"
httpcore = "0.18.0"
httptools = "0.6.0"
httpx = "0.25.0"
identify = "2.5.29"
idna = "3.4"
iniconfig = "2.0.0"
nodeenv = "1.8.0"
packaging = "23.1"
platformdirs = "3.10.0"
pluggy = "1.3.0"
pycryptodomex = "3.19.0"
pydantic-core = "2.6.3"
pyproject-hooks = "1.0.0"
python-dotenv = "1.0.0"
pyyaml = "6.0.1"
requests = "2.31.0"
sniffio = "1.3.0"
soupsieve = "2.5"
starlette = "0.27.0"
typing-extensions = "4.8.0"
urllib3 = "1.26.17"
uvicorn = "0.23.2"
uvloop = "0.17.0"
virtualenv = "20.24.5"
watchfiles = "0.20.0"
websockets = "11.0.3"
psycopg2 = "^2.9.9"
sqlalchemy = "^2.0.23"


[tool.poetry.group.dev.dependencies]
black = "23.9.1"
pre-commit = "^3.5.0"


[tool.poetry.group.test.dependencies]
pytest = "^7.4.3"
pytest-mock = "^3.12.0"
flake8 = "^6.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
