[project]
name = "cr_scraper"
version = "0.1.0"
description = "Cooking recipes scraper and exporter"
license = "MIT"
readme = "README.md"
requires-python = ">=3.13"
authors = [{ name = "pr0f37", email = "adam.nowik@gmail.com" }]
dependencies = [
  "alembic>=1.16.4",
  "bcrypt>=4.3.0",
  "beautifulsoup4>=4.13.4",
  "fastapi[standard]>=0.115.12",
  "psycopg2>=2.9.10",
  "python-jose>=3.4.0",
  "requests>=2.32.3",
  "sqlalchemy>=2.0.40",
]

[dependency-groups]
dev = [
    "debugpy>=1.8.15",
    "pre-commit>=4.2.0",
    "ruff>=0.11.7",
]
test = ["pytest>=8.3.5", "pytest-cov>=6.1.1", "pytest-mock>=3.14.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
